version 0.12 Beta (12-2016) - current moving version
* Add a direct fascgi mode (without using an http proxy), only for tcp/ip sockets, not file sockets.
* verifyhostname only available for LWP::UserAgent->VERSION >= 6.10 (fix #15)
* remove utils.pm dependency (so remove also nagios lib paths)

version 0.11 Beta (01-2016)
* add -x/ --verifyhostname SSL Hostname verification Option (@Vebryn)
* add default path for icinga in lib

version 0.10 Beta
* fix critical and warning options arguments when first value is a dash
* more documentation about IP; hostname and URI
* document library path dependency (@salderma)
* port variable fix (@slawekp)
* some WARNINGs were sent as CRITICALs (max queue, max processes)
* added default ubuntu paths for nagios lib (@ranzhe)
* space separated perf data output, for better compatibility (@gummiboll)

version 0.9 Beta
* Added -S/--ssl option
* Detect text/html response and exit on CRITICAL (not the good response)

Version 0.3
* warn and critical thresolds now contains 3 values (minimum idle process, max processes reached, max queue reached)
* fixed max queue reached

Version 0.2
* add -s/--servname option, possibility to request by IP with a right Host HTTP header
* add -d/--debug option

Version 0.1
* initial commit, work based on check_apache_status.pl by Dennis D. Spreen (dennis at spreendigital.de)