@@ -16,15 +16,23 @@ You need perl.
 If you use the script to request the php status page from a web service (usual
 case) you'll need the perl library, LWP::UserAgent (`apt-get install liblwp-protocol-https-perl` on Debian)
 
-If you request the php status page without http support, directly in fastcgi you
-will need the FCGI library. On debian:
+If you request the php status page without http support, directly in fastcgi, (that's not the usual case) you
+will need the FCGI::Client CPAN library. On debian:
 
     sudo perl -MCPAN -e shell
     install Bundle::CPAN
     reload cpan
     install FCGI::Client
 
-apt-get install libfcgi-perl` on Debian)
+If you have **cpanm** installed, and only if you experience problems, you can
+install all potential dependencies by running (maybe with sudo for global install) :
+
+    cpanm -n --skip-satisfied --installdeps .
+
+This command uses the cpanfile provided with this script to list dependencies.
+You may not have this file, as the check_phpfpm_status.pl script is quite standalone,
+but you can find this file, and the tests files on the github page of the project.
+https://github.com/regilero/check_phpfpm_status
 
 Install of this script
 -----------------------
@@ -46,8 +54,6 @@ Usage: ./check_phpfpm_status.pl -H <host ip> [-p <port>] [-s servername] [-t <ti
    Specific URL (only the path part of it in fact) to use, instead of the default "/fpm-status"
 -s, --servername=SERVERNAME
    ServerName, (host header of HTTP request) use it if you specified an IP in -H to match the good Virtualhost in your target
--S, --ssl
-   Wether we should use HTTPS instead of HTTP
 -f, --fastcgi
    Connect directly to php-fpm via network or local socket, using fastcgi protocol instead of HTTP.
 -U, --user=user
@@ -60,6 +66,15 @@ Usage: ./check_phpfpm_status.pl -H <host ip> [-p <port>] [-s servername] [-t <ti
    Debug mode (show http request response)
 -t, --timeout=INTEGER
    timeout in seconds (Default: 15)
+-S, --ssl
+   Wether we should use HTTPS instead of HTTP. Note that you can give some extra parameters to this settings. Default value is 'TLSv1'
+   but you could use things like 'TLSv1_1' or 'TLSV1_2' (or even 'SSLv23:!SSLv2:!SSLv3' for old stuff).
+-x, --verifyssl, --verifyhostname
+   verify certificate and hostname from ssl cert, default is 0 (no security), set it to 1 to really make SSL peer name and certificater checks.
+   'verifyhostname' is the old deprecated name of this option.
+-X, --cacert
+   Full path to the cacert.pem certificate authority used to verify ssl certificates (use with --verifyssl).
+   if not given the cacert from Mozilla::CA cpan plugin will be used.
 -w, --warn=MIN_AVAILABLE_PROCESSES,PROC_MAX_REACHED,QUEUE_MAX_REACHED
    number of available workers, or max states reached that will cause a warning
    -1 for no warning
@@ -68,8 +83,6 @@ Usage: ./check_phpfpm_status.pl -H <host ip> [-p <port>] [-s servername] [-t <ti
    -1 for no CRITICAL
 -V, --version
    prints version number
--x, --verifyhostname
-   verify hostname from ssl cert, set it to 0 to ignore bad hostname from cert
 
 Note :
   3 items can be managed on this check, this is why -w and -c parameters are using 3 values thresolds
@@ -108,4 +121,20 @@ check_phpfpm_status.pl -H 127.0.0.1 -s nagios.example.com -w 1,1,1 -c 0,2,2
 
 check_phpfpm_status.pl -H 127.0.0.1 --fastcgi -p 9002 -w 1,1,1 -c 0,2,2
 
-Licence: GNU GPL v3
+HTTPS/SSL:
+
+  Adding --ssl you can reach an https host:
+
+check_phpfpm_status.pl -H 10.0.0.10 -s mydomain.example.com --ssl
+
+  Check --verify-ssl (false by defaut) --cacert and --sl for more options, like below
+  (note that certificate checks never wortked on my side, add -d for full debug and
+  tell me if it worked for you, you may need up to date CPAN adn openSSL libs)
+
+check_phpfpm_status.pl -H 10.0.0.10 -s mydomain.example.com --ssl TLSv1_2 --verify-ssl 1 --cacert /etc/ssl/cacert.pem
+
+
+LICENSE:
+========
+
+GNU GPL v3
